objects/CommandCenter__Checklist_Job_Completion__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Deployment_Checklist__c</fullName>
        <label>Deployment Checklist</label>
        <referenceTo>CommandCenter__Deployment_Checklist__c</referenceTo>
        <relationshipLabel>Checklist Job Completions</relationshipLabel>
        <relationshipName>Checklist_Job_Completions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__RM_Configuration_Job__c</fullName>
        <label>RM Configuration Job</label>
        <referenceTo>CommandCenter__RM_Configuration__c</referenceTo>
        <relationshipLabel>Checklist Job Completions</relationshipLabel>
        <relationshipName>Checklist_Job_Completions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Checklist Job Completion</label>
    <nameField>
        <displayFormat>CheckList-{0000}</displayFormat>
        <label>Checklist Job Completion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Job Completions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>